added "ready" block in base template for jquery scripts

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,5 +54,13 @@
     <a href="http://validator.w3.org/check?uri=referer"><img src="/media/images/valid-xhtml10.png" alt="Valid XHTML 1.0 Strict" /></a> 
 </p> 
 
+<script type="text/javascript">
+    <!--
+    $(document).ready(function() {
+	{% block ready %}{% endblock %}
+    });
+    //-->
+</script>
 
 {% endblock body %}
+
