--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
     <a href="/main/top/50/"><span>top 50</span></a> ;
     -->
     <a href="{% url bashoneliners.main.views.index %}"><span>latest 50</span></a> ;
+    <a href="/feed/"><span>RSS</span></a> ;
     <a href="#" id="search" class="comingsoon"><span>Search</span></a>
     <input type="text" class="hidden" id="search-query" />
 </div>
