minor change to make HOME link go to / instead of /main/ to avoid (future) problems with tracking +1-s

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <a href="{% url django.contrib.auth.views.login %}"><span>login / sign up</span></a>
     {% endif %}
     <br/>
-    <a href="{% url bashoneliners.main.views.index %}"><span>home</span></a> ;
+    <a href="/"><span>home</span></a> ;
     <a href="{% url bashoneliners.main.views.mission %}"><span>mission</span></a> ;
     <a class="comingsoon" href="#"><span>top 50</span></a> ;
     <!--
