added generic .invisible style

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -85,6 +85,10 @@
 	display: none;
     }
 	    
+    .invisible {
+	visibility: hidden;
+    }
+	    
     .screen-reader-text {
 	position: absolute;
 	left: -1000em;
