--- a/templates/main/mission.html
+++ b/templates/main/mission.html
@@ -32,9 +32,17 @@
 <p>This is an open-source project, you can find the source code on the project management website:</p>
 <p><a href="https://launchpad.net/bashoneliners">https://launchpad.net/bashoneliners</a></p>
 
-<p>If you would like to participate, please contact us at <a href="mailto:info@bashoneliners.com">info@bashoneliners.com</a> and let's start the conversation!</p>
+<p>If you would like to participate in developing this site, please contact us at <a href="mailto:bashoneliners@lists.launchpad.net">bashoneliners@lists.launchpad.net</a> and let's start the conversation!</p>
 
 <dl>
+    <dt>Task management, upcoming features</dt>
+    <dd>
+	<a href="https://trello.com/board/main/4e7da3cf5a94680b35000893">https://trello.com/board/main/4e7da3cf5a94680b35000893</a>
+    </dd>
+
+    <dt>Mailing list</dt>
+    <dd><a href="mailto:bashoneliners@lists.launchpad.net">bashoneliners@lists.launchpad.net</a></dd>
+
     <dt>Get the source code</dt>
     <dd>
 	<dl>
@@ -43,24 +51,18 @@
 		<pre>bzr branch lp:bashoneliners</pre>
 	    </dd>
 
-	    <dt>Git (read-only mirror)</dt>
+	    <dt>Git (mirror)</dt>
 	    <dd>
 		<pre>git clone git@github.com:titan2x/bashoneliners.git</pre>
 	    </dd>
 
-	    <dt>Subversion (read-only mirror)</dt>
+	    <dt>Subversion (mirror)</dt>
 	    <dd>
 		<pre>svn checkout http://bashoneliners.googlecode.com/svn/trunk/</pre>
 	    </dd>
 	</dl>
     </dd>
 
-    <dt>Task management, upcoming features</dt>
-    <dd>
-	<a href="https://trello.com/board/main/4e7da3cf5a94680b35000893">https://trello.com/board/main/4e7da3cf5a94680b35000893</a>
-    </dd>
-
 </dl>
-
 
 {% endblock %}
