added mailing list public archive link

--- a/templates/main/mission.html
+++ b/templates/main/mission.html
@@ -40,8 +40,11 @@
 	<a href="https://trello.com/board/main/4e7da3cf5a94680b35000893">https://trello.com/board/main/4e7da3cf5a94680b35000893</a>
     </dd>
 
-    <dt>Mailing list</dt>
+    <dt>Mailing list address</dt>
     <dd><a href="mailto:bashoneliners@lists.launchpad.net">bashoneliners@lists.launchpad.net</a></dd>
+
+    <dt>Mailing list public archive</dt>
+    <dd><a href="https://lists.launchpad.net/bashoneliners/">https://lists.launchpad.net/bashoneliners/</a></dd>
 
     <dt>Get the source code</dt>
     <dd>
