simplified oneliners templates, removed oneliners-search and change the empty message to something more generally useful

--- a/templates/main/oneliners.html
+++ b/templates/main/oneliners.html
@@ -50,6 +50,6 @@
 	</table>
     </div>
     {% empty %}
-    <p class="message">{% block oneliners_empty %}No one-liners, yet.{% endblock %}</p>
+    <p class="message">No matching one-liners.</p>
     {% endfor %}
 </div>
