added the search form at the top of the page to make it accessible from all pages, and made search work without javascript too

--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -8,6 +8,11 @@ body {
     min-width: 800px;
 }
 
+#searchbox {
+    margin: 10px 0 0 190px;
+    float: left;
+}
+
 #nav a {
     color: #888;
     text-decoration: none;
