--- a/templates/main/search.html
+++ b/templates/main/search.html
@@ -6,33 +6,14 @@
 
 {% block content %}
 
-<form action="" method="post" id="search-form" style="text-align: center">
-    {{ form.query }}
-
-    <div id="search-loading" class="invisible">
-	<img src="/media/images/loading.gif" alt="" title="" /> Loading ...
-    </div>
-
-    <div id="search-errors" class="hidden error">
-	An error occurred during search.
-    </div>
-</form>
-
-<div id="search-results" class="hidden">
-
-<h2>Results</h2>
-
 {% include 'main/oneliners.html' %}
-
-</div>
 
 {% endblock %}
 
 {% block ready %}
 	function search_success(html) {
-	    $('#search-results .oneliners').html($(html).html());
-	    bind_details_trigger($('#search-results div.oneliners'));
-	    $('#search-results').show();
+	    $('.oneliners').html($(html).html());
+	    bind_details_trigger($('.oneliners'));
 	}
 
 	function search_error(err) {
@@ -50,7 +31,7 @@
 
 	    var options = {
 		'url': '{% url bashoneliners.main.views.search_ajax %}',
-		'type': 'POST',
+		'type': 'GET',
 		'data': { 'query': $('#id_query').val() },
 		'success': search_success,
 		'error': search_error,
