search form is a bit tricky to do right on the login page, so removed it. The login page is going to change, and the form will be back then. Right now it doesnt work anyway

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
 {% block body %}
 
+{% if searchform %}
 <div id="searchbox">
     <form id="search-form" method="get" action="{% url bashoneliners.main.views.search %}">
 	
@@ -30,6 +31,7 @@
 
     </form>
 </div>
+{% endif %}
 
 <div id="nav">
     {% if user.is_authenticated %}
