removed the invisibility black magic from the search page, it was dirty and not needed anymore

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 	
 	<div>
 	    Search: {{ searchform.query }}
-	    <span id="search-loading" class="invisible">
+	    <span id="search-loading" class="hidden">
 		<img src="/media/images/loading.gif" alt="" title="" />
 	    </span>
 
