made openid login the only login method

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,9 +32,9 @@
     {% if user.is_authenticated %}
     <a href="{% url bashoneliners.main.views.profile %}"><span>{{ user.username }}</span></a> ;
     <a href="{% url bashoneliners.main.views.post %}"><span>post a one-liner</span></a> ;
-    <a href="{% url django.contrib.auth.views.logout %}"><span>logout</span></a>
+    <a href="{% url bashoneliners.main.views.logout %}"><span>logout</span></a>
     {% else %}
-    <a href="{% url django.contrib.auth.views.login %}"><span>login / sign up</span></a>
+    <a href="{% url bashoneliners.main.views.login %}"><span>login / sign up</span></a>
     {% endif %}
     <br/>
     <a href="/"><span>home</span></a> ;
