--- a/templates/main/search.html
+++ b/templates/main/search.html
@@ -11,13 +11,15 @@
 {% endblock %}
 
 {% block ready %}
+	var i18n_search_error = 'An error occurred during search.';
+
 	function search_success(html) {
 	    $('.oneliners').html($(html).html());
 	    bind_details_trigger($('.oneliners'));
 	}
 
 	function search_error(err) {
-	    $('#search-errors').append($('#templates .search-errors').html());
+	    $('#search-errors').text(i18n_search_error);
 	}
 
 	function search_completed() {
