made openid login work without javascript fluff and fluffy images

--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -5,11 +5,15 @@
 {% block content %}
 
 <p>Choose an OpenID provider to login:</p>
-<ul class="openid-providers">
-    <li class="google"></li>
-    <li class="yahoo"></li>
-</ul>
-<div class="clear"></div>
+
+<form id="openid-form" method="post" action="/openid/login/"><div>
+{% csrf_token %}
+<p><input type="radio" name="openid_identifier" id="id_openid_google" value="https://www.google.com/accounts/o8/id"/>
+<label for="id_openid_google">Google - {{ 'https://www.google.com/accounts/o8/id' }}</label></p>
+<p><input type="radio" name="openid_identifier" id="id_openid_yahoo" value="http://yahoo.com"/>
+<label for="id_openid_yahoo">Yahoo! - {{ 'http://yahoo.com' }}</label></p>
+<p><input name="bsignin" type="submit" value="Login" /></p>
+</div></form>
 
 <form id="openid-form" method="post" action="/openid/login/"><div>
 {% csrf_token %}
@@ -19,23 +23,5 @@
 
 <p><em>If you would like us to add more OpenID provider shortcuts, please email us at <a href="mailto:bashoneliners@lists.launchpad.net">bashoneliners@lists.launchpad.net</a>. Or, if you would like to implement that yourself please head over to our <a href="{% url bashoneliners.main.views.mission %}">mission statement</a> for details.</em></p>
 
-{% endblock %}
-
-{% block ready %}
-	function submitOpenIdLogin(url) {
-	    $('#id_openid_identifier').val(url);
-	    $('#openid-form').submit();
-	}
-	$('.openid-providers .google').click(function() {
-	    submitOpenIdLogin('https://www.google.com/accounts/o8/id');
-	});
-	$('.openid-providers .yahoo').click(function() {
-	    submitOpenIdLogin('http://yahoo.com');
-	});
-	$('.openid-providers .wordpress').click(function() {
-	    submitOpenIdLogin('http://wordpress.com');
-	});
-
-	$('#id_username').focus();
 {% endblock %}
 
