--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -8,20 +8,48 @@
 
 <form id="openid-form" method="post" action="/openid/login/"><div>
 {% csrf_token %}
+
 <p><input type="radio" name="openid_identifier" id="id_openid_google" value="https://www.google.com/accounts/o8/id"/>
-<label for="id_openid_google">Google - {{ 'https://www.google.com/accounts/o8/id' }}</label></p>
+<label for="id_openid_google">Google - https://www.google.com/accounts/o8/id</label></p>
+
 <p><input type="radio" name="openid_identifier" id="id_openid_yahoo" value="http://yahoo.com"/>
-<label for="id_openid_yahoo">Yahoo! - {{ 'http://yahoo.com' }}</label></p>
+<label for="id_openid_yahoo">Yahoo! - http://yahoo.com</label></p>
+
+<p><input type="radio" name="openid_identifier" id="id_openid_wordpress" value="__username__.wordpress.com"/>
+<label for="id_openid_wordpress">WordPress - <input class="username" type="text" value="username"/>.wordpress.com</label></p>
+
+<p><input type="radio" name="openid_identifier" id="id_openid_myopenid" value="__username__.myopenid.com"/>
+<label for="id_openid_myopenid">MyOpenID - <input class="username" type="text" value="username"/>.myopenid.com</label></p>
+
+<p><input type="radio" name="openid_identifier" id="id_openid_livejournal" value="__username__.livejournal.com"/>
+<label for="id_openid_livejournal">LiveJournal - <input class="username" type="text" value="username"/>.livejournal.com</label></p>
+
+<p><input type="radio" name="openid_identifier" id="id_openid_myspace" value="myspace.com/__username__"/>
+<label for="id_openid_myspace">MySpace - myspace.com/<input class="username" type="text" value="username"/></label></p>
+
+<p><input type="radio" name="openid_identifier" id="id_openid_launchpad" value="launchpad.net/~__username__"/>
+<label for="id_openid_launchpad">Launchpad - launchpad.net/~<input class="username" type="text" value="username"/></label></p>
+
 <p><input name="bsignin" type="submit" value="Login" /></p>
 </div></form>
 
-<form id="openid-form" method="post" action="/openid/login/"><div>
+<form id="openid-form-other" method="post" action="/openid/login/"><div>
 {% csrf_token %}
 <label for="id_openid_identifier"><strong>Or,</strong> enter other OpenID provider URL: </label><input type="text" id="id_openid_identifier" class="openid" name="openid_identifier" maxlength="255" size="30" />
     <input name="bsignin" type="submit" value="Login" />
 </div></form>
 
-<p><em>If you would like us to add more OpenID provider shortcuts, please email us at <a href="mailto:bashoneliners@lists.launchpad.net">bashoneliners@lists.launchpad.net</a>. Or, if you would like to implement that yourself please head over to our <a href="{% url bashoneliners.main.views.mission %}">mission statement</a> for details.</em></p>
+<p>Tip: if you don't know the URL of your OpenID provider, have a look at this wiki page: {{ 'http://en.wikipedia.org/wiki/OpenID'|urlize }}</p>
 
 {% endblock %}
 
+{% block ready %}
+$('#openid-form').bind('submit', function(e) {
+    var openid_provider_url = null;
+    $(this).find(':radio:checked').each(function() {
+	var username = $(this).parent().find('input.username').val();
+	openid_provider_url = $(this).val().replace('__username__', username);
+	$(this).val(openid_provider_url);
+    });
+});
+{% endblock %}
