moved author info under one-liner

--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -52,6 +52,7 @@ a img {
     line-height: 1.3em;
     margin: 1em;
     margin-top: 0.3em;
+    margin-bottom: 0;
     padding: 1em;
     white-space: normal;
     font-family: "Courier New", Courier, monospace;
