added source code page

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -12,8 +12,9 @@
 
 <p>Welcome to <strong>bashoneliners.com</strong>, a place for practical, clever, or interesting Bash/Ksh <em>one-liners</em>, tips, short script snippets. 
 You can post your own one-liner and share with the world!
-Also, this is an open-source project (very very young one), 
-if you would like to participate check out our <a href="{% url bashoneliners.main.views.mission %}">mission statement</a>!
+Also, this is an open-source project,
+if you would like to participate check out our <a href="{% url bashoneliners.main.views.mission %}">mission statement</a> 
+and <a href="{% url bashoneliners.main.views.sourcecode %}">source code</a> pages!
 </p>
 
 <h2>latest 50</h2>
