--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -9,18 +9,18 @@
 <h3>{% if owner %}One-liners you posted{% else %}One-liners posted{% endif %}</h3>
 
 {% if owner and oneliners %}
-<p class="warning">Editing or deleting of one-liners is not implemented yet. <a href="{% url bashoneliners.main.views.mission %}">Wanna do it?</a></p>
+<p class="warning">Editing or deleting of one-liners is not implemented yet. <a href="{% url bashoneliners.main.views.sourcecode %}">Would you be interested in implementing it?</a></p>
 {% endif %}
 
 {% include 'main/oneliners.html' %}
 
 <h3>Favourite one-liners</h3>
 
-<p class="warning">Not implemented yet. <a href="{% url bashoneliners.main.views.mission %}">Wanna do it?</a></p>
+<p class="warning">Not implemented yet. <a href="{% url bashoneliners.main.views.sourcecode %}">Would you be interested in implementing it?</a></p>
 
 <h3>{% if owner %}One-liners you voted on{% else %}One-liners voted on{% endif %}</h3>
 
-<p class="warning">Not implemented yet. <a href="{% url bashoneliners.main.views.mission %}">Wanna do it?</a></p>
+<p class="warning">Not implemented yet. <a href="{% url bashoneliners.main.views.sourcecode %}">Would you be interested in implementing it?</a></p>
 
 
 {% endblock %}
