--- a/templates/main/oneliner.html
+++ b/templates/main/oneliner.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block ready %}
+	$('.expand-all').remove();
 	$('.details-trigger').remove();
 	$('.details').show();
 {% endblock %}
