--- a/templates/main/oneliners.html
+++ b/templates/main/oneliners.html
@@ -1,6 +1,8 @@
 {% load nst %}
 
 <div class="oneliners">
+    <div class="expand-all"></div>
+
     {% for oneliner in oneliners %}
     <div class="oneliner">
 	<h3 class="summary">
