--- a/templates/main/oneliners.html
+++ b/templates/main/oneliners.html
@@ -26,7 +26,7 @@
 	    {% endif %}
 
 	    {% if oneliner.caveats %}
-	    <div class="caveats">
+	    <div class="limitations">
 		<h3>Limitations</h3>
 		{{ oneliner.caveats|nst|safe }}
 	    </div>
