--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
 {% endif %}
 
 <div id="nav">
+    {% if user.is_superuser %}
+    <a href="/admin/"><span>Admin</span></a> ;
+    {% endif %}
     {% if user.is_authenticated %}
     <a href="{% url bashoneliners.main.views.profile %}"><span>{{ user.username }}</span></a> ;
     <a href="{% url bashoneliners.main.views.post %}"><span>Post a one-liner</span></a> ;
