added .clear after expand all collapse all

--- a/templates/main/oneliners.html
+++ b/templates/main/oneliners.html
@@ -2,6 +2,7 @@
 
 <div class="oneliners">
     <div class="expand-all"></div>
+    <div class="clear"></div>
 
     {% for oneliner in oneliners %}
     <div class="oneliner">
