changed edit icon and style

--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -251,5 +251,10 @@ input.openid {
     margin: .5em 0;
 }
 
+.editable {
+    background: url(/media/icons/edit.png) no-repeat;
+    padding-left: 22px;
+}
+
 
 /* eof */
