own one-liner editing in progress

--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -138,6 +138,10 @@ code {
     color: red;
 }
 
+form .oneliner .explanation, form .oneliner .limitations {
+    margin: .5em;
+}
+
 form ul {
     list-style: none;
 }
