--- a/templates/main/oneliners.html
+++ b/templates/main/oneliners.html
@@ -7,6 +7,9 @@
     {% for oneliner in oneliners %}
     <div class="oneliner">
 	<h3 class="summary">
+	    {% if user == oneliner.user and false %}
+	    <a class="editable" href="{% url bashoneliners.main.views.edit_oneliner oneliner.pk %}"></a>
+	    {% endif %}
 	    <a href="{% url bashoneliners.main.views.oneliner oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
 	</h3>
 
