--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -44,11 +44,11 @@
 	    <div class="explanation">{{ form.explanation }}</div>
 	</div>
 	
-	<label for="id_caveats">Limitations (optional)</label>
+	<label for="id_limitations">Limitations (optional)</label>
 	<div class="hint">For example, if the one-liner might not work in some flavors of UNIX, etc.</div>
 	<div class="input">
-	    <div class="error">{{ form.caveats.errors }}</div>
-	    <div class="limitations">{{ form.caveats }}</div>
+	    <div class="error">{{ form.limitations.errors }}</div>
+	    <div class="limitations">{{ form.limitations }}</div>
 	</div>
 
 	<!--
