added new fields to HackerProfile: twitter_name, blog_url, homepage_url

--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -12,11 +12,11 @@
 
 <h3>Favourite one-liners</h3>
 
-<p class="warning">Not implemented yet. <a href="{% url bashoneliners.main.views.sourcecode %}">Would you be interested in implementing it?</a></p>
+<p class="warning">Not implemented yet. <a href="{% url bashoneliners.main.views.sourcecode %}">Would you be interested in implementing this feature?</a></p>
 
 <h3>{% if owner %}One-liners you voted on{% else %}One-liners voted on{% endif %}</h3>
 
-<p class="warning">Not implemented yet. <a href="{% url bashoneliners.main.views.sourcecode %}">Would you be interested in implementing it?</a></p>
+<p class="warning">Not implemented yet. <a href="{% url bashoneliners.main.views.sourcecode %}">Would you be interested in implementing this feature?</a></p>
 
 
 {% endblock %}
