--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -6,6 +6,27 @@
 
 {% block content %}
 
+<h3>Hacker profile</h3>
+
+<table class="profile">
+    <tr>
+	<th>Display name</th>
+	<td>{{ user.username }}</td>
+    </tr>
+    <tr>
+	<th>Twitter name</th>
+	<td>{% if user.hackerprofile.twitter_name %}<a href="{{ user.hackerprofile.twitter_url }}">{{ user.hackerprofile.twitter_name }}</a>{% else %}(not set){% endif %}</td>
+    </tr>
+    <tr>
+	<th>Blog URL</th>
+	<td>{{ user.hackerprofile.blog_url|urlize|default:'(not set)' }}</td>
+    </tr>
+    <tr>
+	<th>Homepage URL</th>
+	<td>{{ user.hackerprofile.homepage_url|urlize|default:'(not set)' }}</td>
+    </tr>
+</table>
+
 <h3>{% if owner %}One-liners you posted{% else %}One-liners posted{% endif %}</h3>
 
 {% include 'main/oneliners.html' %}
